--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fe9866">  <td>20/05/07 21:37:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Coursesearch.courseSearch()[pri:2, instance:com.training.sanity.tests.Coursesearch@64d2d351]">courseSearch</td> 
-  <td>main@346224929</td>   <td></td> </tr>
-<tr bgcolor="fe9866">  <td>20/05/07 21:37:12</td>   <td>-11725</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Coursesearch.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.Coursesearch@64d2d351]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@346224929</td>   <td></td> </tr>
-<tr bgcolor="fe9866">  <td>20/05/07 21:37:21</td>   <td>-3297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Coursesearch.validLoginTest()[pri:1, instance:com.training.sanity.tests.Coursesearch@64d2d351]">validLoginTest</td> 
-  <td>main@346224929</td>   <td></td> </tr>
+<tr bgcolor="fe9866">  <td>20/05/15 00:16:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminLogin.addUser()[pri:3, instance:com.training.sanity.tests.AdminLogin@1b68b9a4]">addUser</td> 
+  <td>main@63468833</td>   <td></td> </tr>
+<tr bgcolor="fe9866">  <td>20/05/15 00:15:59</td>   <td>-15044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminLogin.categoryCourseCreation()[pri:2, instance:com.training.sanity.tests.AdminLogin@1b68b9a4]">categoryCourseCreation</td> 
+  <td>main@63468833</td>   <td></td> </tr>
+<tr bgcolor="fe9866">  <td>20/05/15 00:15:49</td>   <td>-25143</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminLogin.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AdminLogin@1b68b9a4]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@63468833</td>   <td></td> </tr>
+<tr bgcolor="fe9866">  <td>20/05/15 00:15:56</td>   <td>-17485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminLogin.validLoginTest()[pri:1, instance:com.training.sanity.tests.AdminLogin@1b68b9a4]">validLoginTest</td> 
+  <td>main@63468833</td>   <td></td> </tr>
 </table>
