--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.Coursesearch" class="method navigator-link" hash-for-method="courseSearch">courseSearch</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.AdminLogin" class="method navigator-link" hash-for-method="addUser">addUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.Coursesearch" class="method navigator-link" hash-for-method="validLoginTest">validLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.AdminLogin" class="method navigator-link" hash-for-method="categoryCourseCreation">categoryCourseCreation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.AdminLogin" class="method navigator-link" hash-for-method="validLoginTest">validLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,14 +130,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.Coursesearch</span>
+              <span class="class-name">com.training.sanity.tests.AdminLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="courseSearch">
-                  </a> <!-- courseSearch -->
-                  <span class="method-name">courseSearch</span>
+                  <a name="addUser">
+                  </a> <!-- addUser -->
+                  <span class="method-name">addUser</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="categoryCourseCreation">
+                  </a> <!-- categoryCourseCreation -->
+                  <span class="method-name">categoryCourseCreation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -147,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/37/htrv4d6946j3znd03xgr2w8m0000gn/T/testng-eclipse-1438943573/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/37/htrv4d6946j3znd03xgr2w8m0000gn/T/testng-eclipse-287743102/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +168,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.Coursesearch&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.AdminLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'courseSearch')
-data.setCell(0, 2, 'com.training.sanity.tests.Coursesearch')
-data.setCell(0, 3, 3291);
+data.setCell(0, 1, 'addUser')
+data.setCell(0, 2, 'com.training.sanity.tests.AdminLogin')
+data.setCell(0, 3, 15593);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validLoginTest')
-data.setCell(1, 2, 'com.training.sanity.tests.Coursesearch')
-data.setCell(1, 3, 3291);
+data.setCell(1, 1, 'categoryCourseCreation')
+data.setCell(1, 2, 'com.training.sanity.tests.AdminLogin')
+data.setCell(1, 3, 15041);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'validLoginTest')
+data.setCell(2, 2, 'com.training.sanity.tests.AdminLogin')
+data.setCell(2, 3, 2437);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 33 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,18 +251,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.Coursesearch</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.AdminLogin</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">validLoginTest</span>
-                <span class="method-start">8435 ms</span>
+                <span class="method-start">7664 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">courseSearch</span>
-                <span class="method-start">11732 ms</span>
+                <span class="method-name">categoryCourseCreation</span>
+                <span class="method-start">10105 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addUser</span>
+                <span class="method-start">25149 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
