--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.training.sanity.tests.Coursesearch</td>
+<td>com.training.sanity.tests.AdminLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>courseSearch</td>
+<td>categoryCourseCreation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
