--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,11 +100,6 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.AdminLogin" class="method navigator-link" hash-for-method="addUser">addUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.AdminLogin" class="method navigator-link" hash-for-method="categoryCourseCreation">categoryCourseCreation</a> <!-- method navigator-link -->
@@ -135,13 +130,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addUser">
-                  </a> <!-- addUser -->
-                  <span class="method-name">addUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="categoryCourseCreation">
                   </a> <!-- categoryCourseCreation -->
                   <span class="method-name">categoryCourseCreation</span>
@@ -159,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/37/htrv4d6946j3znd03xgr2w8m0000gn/T/testng-eclipse-287743102/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/37/htrv4d6946j3znd03xgr2w8m0000gn/T/testng-eclipse--1855493962/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,24 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addUser')
+data.setCell(0, 1, 'categoryCourseCreation')
 data.setCell(0, 2, 'com.training.sanity.tests.AdminLogin')
-data.setCell(0, 3, 15593);
+data.setCell(0, 3, 10944);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'categoryCourseCreation')
+data.setCell(1, 1, 'validLoginTest')
 data.setCell(1, 2, 'com.training.sanity.tests.AdminLogin')
-data.setCell(1, 3, 15041);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'validLoginTest')
-data.setCell(2, 2, 'com.training.sanity.tests.AdminLogin')
-data.setCell(2, 3, 2437);
+data.setCell(1, 3, 1772);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 33 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -240,9 +224,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.training.sanity.tests.AdminLogin</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">addUser</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -258,15 +249,11 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">validLoginTest</span>
-                <span class="method-start">7664 ms</span>
+                <span class="method-start">4765 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">categoryCourseCreation</span>
-                <span class="method-start">10105 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addUser</span>
-                <span class="method-start">25149 ms</span>
+                <span class="method-start">6541 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
